<?xml version="1.0" encoding="utf-8"?>

<!-- activity_learn_guitar_tuner.xml
Creates layout for tuner activity
Created by: Anthony Powell
Created on: 3/3/15
Last Modified by: Anthony Powell
Last Modified on: 3/6/15
Assignment/Project: A290 Android Development
Part of: Final Project - Learn Guitar
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#f7daa7"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tunerText1"
        android:textColor="#8b2300"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:fontFamily="sans-serif-medium" />
    
    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="10dp"
        android:stretchColumns="*" >
        <TableRow >
  			<Button
  			    android:id="@+id/tunerButtonELow"
  			    android:text="@string/ELowLabel" 
  			    android:background="@drawable/styled_button"
	   			style="@style/button_text"
	    		android:layout_margin="5dp"/>
  			<Button
  			    android:id="@+id/tunerButtonA"
  			    android:text="@string/ALabel"
  			    android:background="@drawable/styled_button"
	    		style="@style/button_text"
	    		android:layout_margin="5dp" />
		</TableRow>
       	<TableRow >
       	    <Button
  			    android:id="@+id/tunerButtonD"
  			    android:text="@string/DLabel"
  			    android:background="@drawable/styled_button"
	    		style="@style/button_text"
	    		android:layout_margin="5dp" />
  			<Button
  			    android:id="@+id/tunerButtonG"
  			    android:text="@string/GLabel"
  			    android:background="@drawable/styled_button"
	  		  	style="@style/button_text"
	    		android:layout_margin="5dp" />
       	</TableRow>
       	<TableRow >
       		<Button
  			    android:id="@+id/tunerButtonB"
  			    android:text="@string/BLabel"
  			    android:background="@drawable/styled_button"
	    		style="@style/button_text"
	    		android:layout_margin="5dp" />
  			<Button
  			    android:id="@+id/tunerButtonEHigh"
  			    android:text="@string/EHighLabel"
  			   	android:background="@drawable/styled_button"
	    		style="@style/button_text"
	    		android:layout_margin="5dp" />
        </TableRow>
    </TableLayout>
    
</LinearLayout>
